Wed Nov 15 15:33:10 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * apps/JAWS/clients/Caching/caching.mpc:

          Add exename definition so that an executable, rather than
          a shared library, is built.

Wed Nov 15 10:35:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * NEWS:

          Added entry for Iliyan Jeliazkov.

Wed Nov 15 01:56:28 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * protocols/ace/HTBP/Makefile.am:
        * protocols/ace/RMCast/Makefile.am:
        * protocols/ace/TMCast/Makefile.am:

          Change includedir to omit the "protocols" subdirectory.

          The header files for these libraries are intended to be
          installed in ${prefix}/include/ace/{HTBP,RMCast,TMCast}
          not ${prefix}/include/protocols/ace/{HTBP,RMCast,TMCast}.

Wed Nov 15 01:11:02 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Makefile.am:

          Add Numeric_Limits.h to Header_Files section.

Tue Nov 14 18:42:18 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Gestalt.inl:
        * ace/Service_Gestalt.cpp:

          After a gestalt gets close()-ed it is still a valid instance
          however, because it is disassociated from its service repository
          the situation becomes another special case the gestalt
          implementation must account for.  This change is in addition to
          the bug fix introduced with the change from "Thu Nov 9 20:07:42
          UTC 2006".

Tue Nov 14 14:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.cpp:
          Removed some not used macros that did cause problems when running
          FOCUS

Tue Nov 14 11:23:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_T.cpp:
          Added hook for FOCUS, const improvement

Tue Nov 14 07:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Updated rtems information
