@@ -1,3 +1,10 @@
+Wed Nov 15 19:08:39 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * ace/config-lite.h:
+
+          Changed to not include <Cstd/stdcomp.h> on Solaris systems
+          when using the stlport4 C++ library.
+
 Wed Nov 15 15:33:10 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * apps/JAWS/clients/Caching/caching.mpc:
